Add react-router, Update UI, Add dynamic imports, Named externals lib

--- a/packages/main/index.html
+++ b/packages/main/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>CONCEPT APP</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 </head>
 
-<body>
+<body style="margin: 0">
     <script type="systemjs-packagemap" src="/packagemap.json"></script>
     <script src="/lib/system.js"></script>
     <script src="/lib/amd.js"></script>
