--- a/packages/main/src/index.html
+++ b/packages/main/src/index.html
@@ -9,8 +9,8 @@
 
 <body style="margin: 0">
     <script type="systemjs-packagemap" src="/packagemap.json"></script>
-    <script src="/lib/systemjs/system@2.0.2.js"></script>
-    <script src="/lib/systemjs/amd@2.0.2.js"></script>
+    <script src="/lib/system.js"></script>
+    <script src="/lib/amd.js"></script>
     <script src="/main.js"></script>
 
     <div id="navigation"></div>
